--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,12 @@
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Kumbh+Sans:wght@400;500;700&family=Roboto+Slab:wght@400;500;700&family=Space+Mono:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Pokedex</title>
 	</head>
 	<body>
